fixed some issues on mobile for company/show and user/show

--- a/app/assets/stylesheets/components/_company_show_profile_card.scss
+++ b/app/assets/stylesheets/components/_company_show_profile_card.scss
@@ -10,7 +10,7 @@
 
   @media screen and (max-width: $small) {
     align-content: center;
-    height: 624px;
+    height: 524px;
   }
 
   h3 {
